@@ -180,7 +180,7 @@ public class InstanceServiceImpl implements InstanceService {
         return state;
     }
 
-    private void saveData(State state, Properties storage) {
+    private static void saveData(State state, Properties storage) {
         storage.put("ssh.port", Integer.toString(state.defaultSshPortStart));
         storage.put("rmi.registry.port", Integer.toString(state.defaultRmiRegistryPortStart));
         storage.put("rmi.server.port", Integer.toString(state.defaultRmiServerPortStart));
@@ -483,7 +483,7 @@ public class InstanceServiceImpl implements InstanceService {
         }, true);
     }
 
-    private void doStart(InstanceState instance, String name, String javaOpts) throws IOException {
+    private static void doStart(InstanceState instance, String name, String javaOpts) throws IOException {
         String opts = javaOpts;
         if (opts == null || opts.length() == 0) {
             opts = instance.opts;
@@ -516,11 +516,7 @@ public class InstanceServiceImpl implements InstanceService {
                 classpath.append(System.getProperty("path.separator"));
                 classpath.append(jdk9Classpath);
             }
-            jdkOpts = " --add-reads=java.xml=java.logging" +
-                      " --add-exports=java.base/org.apache.karaf.specs.locator=java.xml,ALL-UNNAMED" +
-                      " --patch-module java.base=" + System.getProperty("karaf.home") + "/lib/endorsed/org.apache.karaf.specs.locator-" + System.getProperty("karaf.version") + ".jar" +
-                      " --patch-module java.xml=" + System.getProperty("karaf.home") + "/lib/endorsed/org.apache.karaf.specs.java.xml-" + System.getProperty("karaf.version") + ".jar" +
-                      " --add-opens java.base/java.security=ALL-UNNAMED" +
+            jdkOpts = " --add-opens java.base/java.security=ALL-UNNAMED" +
                       " --add-opens java.base/java.net=ALL-UNNAMED" +
                       " --add-opens java.base/java.lang=ALL-UNNAMED" +
                       " --add-opens java.base/java.util=ALL-UNNAMED" +
@@ -541,7 +537,7 @@ public class InstanceServiceImpl implements InstanceService {
                 jdkOpts += " -Djava.security.manager=allow";
             }
         } else {
-            jdkOpts = " -Djava.endorsed.dirs=\"" + new File(new File(new File(System.getProperty("java.home"), "jre"), "lib"), "endorsed") + System.getProperty("path.separator") + new File(new File(System.getProperty("java.home"), "lib"), "endorsed") + System.getProperty("path.separator") + new File(libDir, "endorsed").getCanonicalPath() + "\""
+            jdkOpts = " -Djava.endorsed.dirs=\"" + new File(new File(new File(System.getProperty("java.home"), "jre"), "lib"), "endorsed") + System.getProperty("path.separator") + new File(new File(System.getProperty("java.home"), "lib"), "endorsed") + "\""
                     + " -Djava.ext.dirs=\"" + new File(new File(new File(System.getProperty("java.home"), "jre"), "lib"), "ext") + System.getProperty("path.separator") + new File(new File(System.getProperty("java.home"), "lib"), "ext") + System.getProperty("path.separator") + new File(libDir, "ext").getCanonicalPath() + "\"";
         }
         String command = "\""
@@ -573,7 +569,7 @@ public class InstanceServiceImpl implements InstanceService {
         instance.pid = process.getPid();
     }
 
-    private StringBuilder classpathFromLibDir(File libDir) throws IOException {
+    private static StringBuilder classpathFromLibDir(File libDir) throws IOException {
         File[] jars = libDir.listFiles((dir, name) -> name.endsWith(".jar"));
         StringBuilder classpath = new StringBuilder();
         if (jars != null) {
@@ -587,7 +583,7 @@ public class InstanceServiceImpl implements InstanceService {
         return classpath;
     }
 
-    private void addJar(StringBuilder sb, String groupId, String artifactId) {
+    private static void addJar(StringBuilder sb, String groupId, String artifactId) {
         File artifactDir = new File(System.getProperty("karaf.home") + File.separator +
                                     "system" + File.separator +
                                     groupId.replaceAll("\\.", File.separator) + File.separator +
@@ -829,7 +825,7 @@ public class InstanceServiceImpl implements InstanceService {
         }, true);
     }
 
-    private void checkPid(InstanceState instance) throws IOException {
+    private static void checkPid(InstanceState instance) throws IOException {
         if (instance.pid != 0) {
             Process process = new ProcessBuilderFactoryImpl().newBuilder().attach(instance.pid);
             if (!process.isRunning()) {
@@ -917,7 +913,7 @@ public class InstanceServiceImpl implements InstanceService {
     }
 
 
-    private Integer getKarafPort(State state, String name, String path, final String key) {
+    private static Integer getKarafPort(State state, String name, String path, final String key) {
         InstanceState instance = state.instances.get(name);
         if (instance == null) {
             throw new IllegalArgumentException("Instance " + name + " not found");
@@ -952,10 +948,10 @@ public class InstanceServiceImpl implements InstanceService {
     }
 
     private String getKarafHost(final String name, final String path, final String key) {
-        return execute(state -> InstanceServiceImpl.this.getKarafHost(state, name, path, key), false);
+        return execute(state -> getKarafHost(state, name, path, key), false);
     }
 
-    private String getKarafHost(State state, String name, String path, final String key) {
+    private static String getKarafHost(State state, String name, String path, final String key) {
         InstanceState instance = state.instances.get(name);
         if (instance == null) {
             throw new IllegalArgumentException("Instance " + name + " not found");
@@ -1132,7 +1128,7 @@ public class InstanceServiceImpl implements InstanceService {
      * @param is
      * @param os
      */
-    private void copyStream(InputStream is, OutputStream os) {
+    private static void copyStream(InputStream is, OutputStream os) {
         PrintStream out = new PrintStream(os);
         Scanner scanner = new Scanner(is);
         while (scanner.hasNextLine() ) {
@@ -1142,7 +1138,7 @@ public class InstanceServiceImpl implements InstanceService {
         scanner.close();
     }
 
-    private void filterResource(File basedir, String path, HashMap<String, String> props) throws IOException {
+    private static void filterResource(File basedir, String path, HashMap<String, String> props) throws IOException {
         File file = new File(basedir, path);
         File bak = new File(basedir, path + BACKUP_EXTENSION);
         if (!file.exists()) {
@@ -1175,7 +1171,7 @@ public class InstanceServiceImpl implements InstanceService {
         }
     }
 
-    private void copyAndFilterResource(InputStream source, OutputStream target, Map<String, String> props) throws IOException {
+    private static void copyAndFilterResource(InputStream source, OutputStream target, Map<String, String> props) throws IOException {
         // read it line at a time so that we can use the platform line ending when we write it out.
         PrintStream out = new PrintStream(target);
         Scanner scanner = new Scanner(source);
@@ -1200,7 +1196,7 @@ public class InstanceServiceImpl implements InstanceService {
         }
     }
 
-    private String filter(String line, Map<String, String> props) {
+    private static String filter(String line, Map<String, String> props) {
         for (Map.Entry<String, String> i : props.entrySet()) {
             int p1 = line.indexOf(i.getKey());
             if( p1 >= 0 ) {
@@ -1212,7 +1208,7 @@ public class InstanceServiceImpl implements InstanceService {
         return line;
     }
 
-    private void mkdir(File karafBase, String path, boolean printOutput) {
+    private static void mkdir(File karafBase, String path, boolean printOutput) {
         File file = new File(karafBase, path);
         if( !file.exists() ) {
             logDebug("Creating dir: %s", printOutput, file.getPath());
@@ -1220,7 +1216,7 @@ public class InstanceServiceImpl implements InstanceService {
         }
     }
 
-    private void makeFileExecutable(File serviceFile) throws IOException {
+    private static void makeFileExecutable(File serviceFile) throws IOException {
         try {
             Set<PosixFilePermission> permissions = new HashSet<>();
             permissions.add(PosixFilePermission.OWNER_EXECUTE);
